--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="ko-KR" >
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="./favicon.ico" type="image/x-icon" />
   <title>Layer7 Demonstration</title>
   <meta content="#181d23" name="theme-color" />
   <meta content="IE=edge" http-equiv="X-UA-Compatible" />
